# wecom-python-sdk

./: .gitignore  CMakeLists.txt  README.md  setup.py  wecom_sdk-1.0-cp310-cp310-linux_x86_64.whl
lib/linux/: demo.cpp
lib/win/: demo.cpp
src/: wecom_module.cpp
stub/: __init__.pyi
